--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "symfony/yaml": "^4.3"
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.12.11",
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^4.3",
         "symfony/css-selector": "^4.3",
         "symfony/phpunit-bridge": "^4.3"
