--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.idea/
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -9,7 +10,8 @@
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
-.phpunit
+/bin/.phpunit
+/.phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
