--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,5 +1,6 @@
 parameters:
+    bootstrapFiles:
+       - bin/.phpunit/phpunit-8.5-0/vendor/autoload.php
     level: max
     paths:
         - src/
-        - tests/
