--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,19 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "sensio/framework-extra-bundle": "^5.3",
-        "symfony/console": "^4.3",
-        "symfony/dotenv": "^4.3",
-        "symfony/flex": "^1.1",
-        "symfony/framework-bundle": "^4.3",
-        "symfony/yaml": "^4.3"
+        "sensio/framework-extra-bundle": "^5.6",
+        "symfony/console": "^5.1",
+        "symfony/dotenv": "^5.1",
+        "symfony/flex": "^1.10",
+        "symfony/framework-bundle": "^5.1",
+        "symfony/yaml": "^5.1"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.11",
+        "phpstan/phpstan": "^0.12",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^4.3",
-        "symfony/css-selector": "^4.3",
-        "symfony/phpunit-bridge": "^4.3"
+        "symfony/browser-kit": "^5.1",
+        "symfony/css-selector": "^5.1",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "preferred-install": {
@@ -60,5 +60,11 @@
     },
     "conflict": {
         "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "5.1.*"
+        }
     }
 }
