--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,23 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.4.0",
+        "php": "^8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "sensio/framework-extra-bundle": "^5.6",
-        "symfony/console": "^5.2",
-        "symfony/dotenv": "^5.2",
-        "symfony/flex": "^1.11",
-        "symfony/framework-bundle": "^5.2",
-        "symfony/yaml": "^5.2"
+        "symfony/console": "^5.3",
+        "symfony/dotenv": "^5.3",
+        "symfony/flex": "^1.13",
+        "symfony/framework-bundle": "^5.3",
+        "symfony/runtime": "5.3.*",
+        "symfony/yaml": "^5.3"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
-        "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^5.2",
-        "symfony/css-selector": "^5.2",
-        "symfony/phpunit-bridge": "^5.2"
+        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/browser-kit": "^5.3",
+        "symfony/css-selector": "^5.3",
+        "symfony/phpunit-bridge": "^5.3"
     },
     "config": {
         "preferred-install": {
@@ -40,6 +40,7 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php80": "*",
         "symfony/polyfill-php74": "*",
         "symfony/polyfill-php73": "*",
         "symfony/polyfill-php72": "*",
@@ -65,7 +66,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.2.*"
+            "require": "5.3.*"
         }
     }
 }
