--- a/composer.json
+++ b/composer.json
@@ -6,25 +6,29 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "symfony/console": "^5.3",
-        "symfony/dotenv": "^5.3",
+        "symfony/console": "^5.4",
+        "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.13",
-        "symfony/framework-bundle": "^5.3",
-        "symfony/runtime": "5.3.*",
-        "symfony/yaml": "^5.3"
+        "symfony/framework-bundle": "^5.4",
+        "symfony/runtime": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan": "^1.5",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/browser-kit": "^5.3",
-        "symfony/css-selector": "^5.3",
-        "symfony/phpunit-bridge": "^5.3"
+        "symfony/browser-kit": "^5.4",
+        "symfony/css-selector": "^5.4",
+        "symfony/phpunit-bridge": "^5.4"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true,
+            "symfony/runtime": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -66,7 +70,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.3.*"
+            "require": "5.4.*"
         }
     }
 }
