--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,23 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "symfony/console": "^5.4",
-        "symfony/dotenv": "^5.4",
-        "symfony/flex": "^1.13",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/runtime": "^5.4",
-        "symfony/yaml": "^5.4"
+        "symfony/console": "6.1.*",
+        "symfony/dotenv": "6.1.*",
+        "symfony/flex": "^2",
+        "symfony/framework-bundle": "6.1.*",
+        "symfony/runtime": "6.1.*",
+        "symfony/yaml": "6.1.*"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.5",
-        "squizlabs/php_codesniffer": "^3.6",
-        "symfony/browser-kit": "^5.4",
-        "symfony/css-selector": "^5.4",
-        "symfony/phpunit-bridge": "^5.4"
+        "phpstan/phpstan": "^1.7",
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
+        "symfony/phpunit-bridge": "6.1.*"
     },
     "config": {
         "preferred-install": {
@@ -41,16 +41,13 @@
         }
     },
     "replace": {
-        "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php80": "*",
-        "symfony/polyfill-php74": "*",
-        "symfony/polyfill-php73": "*",
         "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
     },
     "scripts": {
         "auto-scripts": {
@@ -70,7 +67,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.1.*"
         }
     }
 }
