--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
@@ -15,10 +16,14 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^1.7",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
-        "symfony/phpunit-bridge": "6.1.*"
+        "symfony/maker-bundle": "^1.48",
+        "symfony/phpunit-bridge": "6.1.*",
+        "symfony/stopwatch": "6.1.*",
+        "symfony/web-profiler-bundle": "6.1.*"
     },
     "config": {
         "preferred-install": {
