--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    _instanceof:
+        App\Interface\CashMachineInterface:
+            tags: [ 'app.cashMachine' ]
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -20,6 +23,19 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+    App\CashMachine\Model\ChangeEnvelope:
+        arguments:
+            $change : []
+
+    App\CashMachine\Model\Currency:
+        arguments:
+            $code: 'code'
+            $symbol: 'symbol'
+
+    App\CashMachine\Service\CashMachineGenerator:
+        arguments:
+            $currencies: [[code: EUR, symbol: €],[code: JPY,symbol: ¥]]
+            $cashMachines: !tagged_iterator app.cashMachine
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
